<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ResultActivity">

    <TextView
        android:id="@+id/lbl_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/pilih_warna"
        android:textColor="#0B0B0B"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/rg_color"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        app:layout_constraintHorizontal_bias="0.06"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lbl_title">

        <RadioButton
            android:id="@+id/radio_merah"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/merah"
            tools:ignore="TouchTargetSizeCheck" />

        <RadioButton
            android:id="@+id/radio_hijau"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hijau"
            tools:ignore="TouchTargetSizeCheck" />

        <RadioButton
            android:id="@+id/radio_biru"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/biru"
            tools:ignore="TouchTargetSizeCheck" />

        <RadioButton
            android:id="@+id/radio_hitam"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hitam"
            tools:ignore="TouchTargetSizeCheck" />
    </RadioGroup>

    <Button
        android:id="@+id/btn_result"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="16dp"
        android:background="#8A7F7F"
        android:text="@string/pilih"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rg_color" />

</androidx.constraintlayout.widget.ConstraintLayout>