<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/si"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".simpleActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#FFFFFF">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn_back"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:background="@drawable/ic_baseline_arrow_back_24"
                    tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/font"
                    android:text="@string/produk"
                    android:textColor="#A15A55"
                    android:textSize="20sp" />

                <Button
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:background="@drawable/ic_baseline_shopping_cart_24"
                    tools:ignore="SpeakableTextPresentCheck,SpeakableTextPresentCheck,TouchTargetSizeCheck" />

            </LinearLayout>
        </androidx.appcompat.widget.Toolbar>

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:scaleType="fitXY"
                android:src="@drawable/foto1" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_marginStart="14dp"
                android:layout_marginBottom="14dp"
                android:background="#4D000000"
                android:drawablePadding="7dp"
                android:padding="7dp"
                android:text="@string/_5_photos"
                android:textColor="@color/white"
                android:textSize="18sp"
                app:drawableStartCompat="@android:drawable/ic_menu_gallery" />

        </FrameLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="8dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/warna"
                android:text="@string/content_produk"
                android:textColor="#A65757" />

            <Button
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:background="@drawable/ic_baseline_favorite_border_24"
                tools:ignore="TouchTargetSizeCheck,TouchTargetSizeCheck,SpeakableTextPresentCheck" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:fontFamily="@font/warna"
                android:text="@string/content_price"
                android:textColor="#2C2C2C" />




        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="10dp"
                android:layout_weight="2"
                android:fontFamily="@font/warna"
                android:text="@string/kondisi"
                android:textColor="#000000" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:fontFamily="@font/warna"
                android:text="@string/content_kondisi"
                android:textColor="#534D4D" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_weight="2"
                android:fontFamily="@font/warna"
                android:text="@string/kategori"
                android:textColor="#000000" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/warna"
                android:text="@string/content_kategori"
                android:textColor="#534D4D" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_weight="2"
                android:fontFamily="@font/warna"
                android:text="@string/merek"
                android:textColor="#000000" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/warna"
                android:text="@string/content_display"
                android:textColor="#534D4D" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_weight="2"
                android:fontFamily="@font/warna"
                android:text="@string/stok"
                android:textColor="#000000" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/warna"
                android:text="@string/content_stok"
                android:textColor="#534D4D" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_weight="2"
                android:fontFamily="@font/warna"
                android:text="@string/dikirim_dari"
                android:textColor="#322B2B" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/warna"
                android:text="@string/content_dikirim"
                android:textColor="#534D4D" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="5dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="15dp"
                android:layout_marginBottom="15dp"
                android:text="@string/content_text"
                android:textColor="#090909"
                android:textSize="15sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:layout_gravity="left"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="10dp"
                android:background="@drawable/solid"
                android:drawableStart="@drawable/ic_baseline_add_shopping_cart_24"
                android:padding="10dp"
                android:text="@string/add_to_cart"
                android:textColor="#4E342E"
                tools:ignore="TextContrastCheck"
                style="?android:attr/buttonBarButtonStyle" />

            <Button
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:layout_gravity="right"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/solid"
                android:padding="10dp"
                android:text="@string/buy_now"
                android:textColor="#4E342E"
                tools:ignore="TextContrastCheck"
                style="?android:attr/buttonBarButtonStyle" />


        </LinearLayout>



    </LinearLayout>


</ScrollView>