<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/si"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFDFD"
    tools:context=".simpleActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#FFFFFF">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn_back"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:background="@drawable/ic_baseline_arrow_back_24"
                    tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/font"
                    android:text="@string/profil"
                    android:textColor="#A15A55"
                    android:textSize="25sp" />


            </LinearLayout>
        </androidx.appcompat.widget.Toolbar>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="230dp"
            android:background="#000000"
            android:padding="20dp">


            <ImageView
                android:id="@+id/profile_image"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_centerVertical="true"
                android:background="#000000"
                android:src="@drawable/profile" />

            <TextView
                android:id="@+id/full_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="10dp"
                android:layout_toEndOf="@+id/profile_image"
                android:fontFamily="@font/warna"
                android:includeFontPadding="false"
                android:text="@string/toko_faeyza"
                android:textColor="#FFFFFF"
                android:textSize="16sp" />


        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:hint="@string/nama_toko">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_baseline_person_outline_24"
                    android:drawablePadding="10dp"
                    android:text="@string/faeyza"
                    android:textStyle="bold"
                    tools:ignore="TouchTargetSizeCheck">

                </com.google.android.material.textfield.TextInputEditText>


            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:hint="@string/e_mail">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_baseline_email_24"
                    android:drawablePadding="10dp"
                    android:text="@string/faeyzaa08_gmail_com"
                    android:textStyle="bold"
                    tools:ignore="TouchTargetSizeCheck">

                </com.google.android.material.textfield.TextInputEditText>


            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:hint="@string/phone_number">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_baseline_phone_24"
                    android:drawablePadding="10dp"
                    android:text="@string/_089669346069"
                    android:textStyle="bold"
                    tools:ignore="TouchTargetSizeCheck">

                </com.google.android.material.textfield.TextInputEditText>


            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/alamat"
                android:layout_marginBottom="10dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_baseline_location_on_24"
                    android:drawablePadding="10dp"
                    android:text="@string/kalimantan_barat_ketapang_delta_pawan"
                    android:textStyle="bold"
                    tools:ignore="TouchTargetSizeCheck">

                </com.google.android.material.textfield.TextInputEditText>


            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

    </LinearLayout>
</ScrollView>